src/objects/FSTR__Process_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used to manage the custom field mappings created for process and step objects</description>
    <fields>
        <fullName>FSTR__Actual_Field__c</fullName>
        <description>the actual field on the object</description>
        <label>Actual Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Expected_Field__c</fullName>
        <description>The field expected by Process Composer</description>
        <label>Expected Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Process_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Process Object</label>
        <type>Checkbox</type>
    </fields>
    <label>Conga Orchestrate Field Mapping</label>
</CustomObject>